CIRC-1875 Fix code smells