@@ -25,7 +25,6 @@ import static org.folio.circulation.domain.ItemStatus.WITHDRAWN;
 import java.util.Arrays;
 import java.util.EnumMap;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class RequestTypeItemStatusWhiteList {
   private static EnumMap<ItemStatus, Boolean> recallRules;
@@ -160,6 +159,6 @@ public class RequestTypeItemStatusWhiteList {
   public static List<RequestType> getRequestTypesAllowedForItemStatus(ItemStatus itemStatus) {
     return Arrays.stream(RequestType.values())
       .filter(requestType -> requestsRulesMap.get(requestType).get(itemStatus))
-      .collect(Collectors.toList());
+      .toList();
   }
 }
